--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "lowdb": "^6.1.1",
     "moment": "^2.29.4",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0"
   }
